Set up the basic app logic and classes, config- file, model class for weather and service layer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=web-service-weather-api
+
+#Weather API
+weather.api.url=https://api.openweathermap.org/data/2.5/weather
+weather.api.key=6ac1f2ec63e123341d00313ce550e43a
